finish cards list and add card, weather defail(WIP)

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,4 +1,7 @@
-@import "general.scss";
-@import "app.scss";
-@import "kanban";
+@import "reset";
+@import "general";
+@import "app";
 @import "nav";
+@import "side-menu";
+@import "cards";
+@import "weather-detail";
