--- a/src/style/nav.scss
+++ b/src/style/nav.scss
@@ -1,12 +1,44 @@
 .header {
+  --headerBg: #fff;
+  --headerShadow: #E8EAFF;
+
   display: flex;
-  //background-color: rgb(15, 157, 88);
+  background-color: var(--headerBg);
   margin-bottom: 1rem;
   align-items: center;
   padding: 8px 10px;
+
+  //border-bottom: 1px solid #707070;
+  -webkit-box-shadow:0px 10px 14px var(--headerShadow);
+  -moz-box-shadow: 0px 10px 14px var(--headerShadow);
+  box-shadow: 0px 10px 14px var(--headerShadow)
 }
 
-.logo {
+.dark {
+  .header {
+    --headerBg: #2B244D;
+    --headerShadow: none;
+
+  }
+}
+
+.header__item {
+  flex: 1
+}
+
+.toggle {
+  display: flex;
+  text-transform: uppercase;
+  align-items: center;
+}
+
+.toggle__button {
+  margin: 0 1rem;
+}
+
+.toggle__label {
+  font-size: 1rem;
+
 }
 
 .logo__item {
@@ -19,11 +51,34 @@
 .nav {
   display: flex;
 }
-.date {
-  flex: 1;
+
+.date__text {
   text-align: center;
+  text-transform: uppercase;
+  font-size: 3rem;
+
 }
 .nav__item {
   padding: 1rem;
   text-decoration: none;
 }
+
+.icon__hamburger {
+  margin-right: 4rem;
+  cursor: pointer;
+  z-index: 30;
+}
+
+.header__item--left {
+  text-align: left;
+  display: flex;
+  align-items: center;
+}
+
+
+.header__item--right {
+  display: flex;
+  justify-content: flex-end;
+}
+
+
