--- a/src/style/cards.scss
+++ b/src/style/cards.scss
@@ -1,3 +1,18 @@
+.home-page__container {
+  --bg: var(--white);
+  --bgEnd: var(--white);
+  position: relative;
+  height: 100%;
+  background: linear-gradient(to bottom, var(--bg), var(--bgEnd));
+}
+
+.dark {
+  .home-page__container {
+    --bg: #b290ff;
+    --bgEnd: #432c85;
+  }
+}
+
 .cards-container {
   display: flex;
   flex: 1;
