--- a/src/style/nav.scss
+++ b/src/style/nav.scss
@@ -4,13 +4,10 @@
 
   display: flex;
   background-color: var(--headerBg);
-  margin-bottom: 1rem;
   align-items: center;
   padding: 8px 10px;
-
-  //border-bottom: 1px solid #707070;
-  -webkit-box-shadow:0px 10px 14px var(--headerShadow);
-  -moz-box-shadow: 0px 10px 14px var(--headerShadow);
+  z-index: 10;
+  position: relative;
   box-shadow: 0px 10px 14px var(--headerShadow)
 }
 
@@ -18,7 +15,6 @@
   .header {
     --headerBg: #2B244D;
     --headerShadow: none;
-
   }
 }
 
