--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -28,12 +28,16 @@ code {
 .layout {
   width: 100vw;
   height: 100vh;
+
   --green: #0f9d58;
   --red: #FF0070;
   --light-green: #00FF9B;
   --primary-green: #00ff9b;
   --primary-blue: #003EFF;
   --secondary: #432c85;
+
+  --light-green-layout: #5ee7df;
+  --light-blue-layout: #66a6ff;
 
   --white: #ffffff;
   --black: #000000;
