--- a/src/style/_form.scss
+++ b/src/style/_form.scss
@@ -56,7 +56,7 @@
 }
 
 .form__btn {
-  background-color: #00ff9b;
+  background-color: var(--primary-green);
   padding: 1.5rem;
   border-radius: 2rem;
   outline: 0;
@@ -66,7 +66,7 @@
   cursor: pointer;
 
   &:hover {
-    background: linear-gradient(to right, #03a9f4, #00ff9b);
+    background: linear-gradient(to right, #03a9f4, var(--primary-green));
   }
 }
 
