--- a/src/style/login.scss
+++ b/src/style/login.scss
@@ -1,37 +1,39 @@
-@import 'form';
+@import "form/form";
+
 
 .sign-in {
-  @extend .form__container;
+  @include form-container;
 }
 
+
 .sign-in__content {
-  @extend .form__content;
+  @include form__content;
 }
 
 .sign-in__input-area {
-  @extend .form__input-area;
+  @include form__input-area;
 }
 
 .sign-in__form {
-  @extend .form;
+  @include form;
 }
 
 .sign-in__bg {
-  @extend .form__bg;
+  @include form__bg;
 }
 
 .sign-in__img {
-  @extend .form__img;
+  @include form__img;
 }
 
 .sign-in__btn {
-  @extend .form__btn;
+  @include form__btn;
 }
 
 .sign-in__link-ask {
-  @extend .form__link-ask;
+  @include form__link-ask;
 }
 
 .sign-in__link {
-  @extend .form__link;
+  @include form__link;
 }
